--- a/style.css
+++ b/style.css
@@ -115,6 +115,9 @@ nav {
     font-size: 30px;
     color: #854EEE;
 }
+.call{
+    color: #854EEE;
+}
 
 /* ***********************************section 2***************************************** */
 .section_3_card {
